fix for Scrollbars not clickable on overflow (#553)
Make ngdialog-overlay background transparent and pass this background opacity to ngdialog. 
ngdialog-overlay have now a 15px margin-right to allow clickeable scrollbar.

--
Regards,
www.dpicode.com

--- a/css/ngDialog.css
+++ b/css/ngDialog.css
@@ -57,6 +57,10 @@
   right: 0;
   bottom: 0;
   left: 0;
+  /* fix for Scrollbars not clickable on overflow #552 */
+  background: rgba(0, 0, 0, 0.4); 
+  animation: ngdialog-fadein 0.5s;
+  /* end fix for Scrollbars not clickable on overflow #552 */
 }
 
 .ngdialog.ngdialog-disabled-animation,
@@ -68,7 +72,6 @@
 
 .ngdialog-overlay {
   position: fixed;
-  background: rgba(0, 0, 0, 0.4);
   top: 0;
   right: 0;
   bottom: 0;
@@ -76,6 +79,10 @@
   -webkit-backface-visibility: hidden;
   -webkit-animation: ngdialog-fadein 0.5s;
   animation: ngdialog-fadein 0.5s;
+  /* fix for Scrollbars not clickable on overflow #552 */
+  margin-right: 15px;
+  background: transparent;
+  /* end fix for Scrollbars not clickable on overflow #552 */
 }
 
 .ngdialog-no-overlay {
